Fix relative paths for GitHub Pages by adding <base> and using document.baseURI in app.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Minimal Blog</title>
+  <!-- Add base so relative URLs resolve correctly when site is served at /dumidu_blog1/ -->
+  <base href="/dumidu_blog1/">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
